# WEB3-Automation

./: .env.example  CONFIGURATION_SUMMARY.md  CONFIG_GUIDE.md  DEBUGGING_GUIDE.md  DVD_COMPATIBILITY_REPORT.md  FINAL_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ML_ENHANCEMENT_README.md  QUICKSTART.md  ROADMAP.md  Target.sol  WINDOWS_SETUP.md  agent_core.py  ai_triage.py  analyze_dvd.py  audit_code_quality.py  audit_runner.py  benchmark_triage.py  bss_scanner.py  main.py  multichain_scanner.py  report_generator.py  requirements.txt  scanner_core.py  setup_session.ps1  slither_wrapper.py  tasks.py  temp_contract.sol  test_all_functionality.py  test_e2e.py  test_real_bss_contract.py  test_slither.py  trigger_scan.py  unified_scanner.py  verification_core.py
New/: .env.COMPLETE_TEMPLATE  .env.example  .env_RPC_GUIDE.md  .gitignore  .pre-commit-config.yaml  CELERY_FIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PASTE_INTO_ENV.txt  PHASE1-FINAL.md  PHASE1-STATUS.md  PHASE2-STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  SESSION-SUMMARY.md  SETUP_STATUS.md  STATUS.md  THIS_WEEK.md  apply_cors.py  docker-compose.yml  docker-compose.yml.backup.20251202-201128  fix-cors.ps1  playwright.config.ts  start.ps1
New/.github/workflows/: e2e.yml  pipeline-tests.yml  security-scan.yml  test.yml
New/configs/monitoring/: alert_rules.yml  grafana-dashboard.json  prometheus.yml
New/configs/semgrep/: solidity-rules.yaml
New/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  RPC_POOL_INTEGRATION.md  SECURITY.md  WINDOWS_SETUP.md
New/scripts/: fix_unhealthy_services.ps1  health_check.py  populate_rag.py  test_all_services.ps1  test_e2e.py
New/services/address-scanner/: Dockerfile  README.md  app.py  app.py.backup  app_original.py  requirements.txt
New/services/fuzzing-agent/: Dockerfile  app.py  requirements.txt
New/services/guardrail/: Dockerfile  README.md  app.py  requirements.txt
New/services/llm-router/: Dockerfile  app.py  requirements.txt  router_config.yaml
New/services/mlops-engine/: Dockerfile  README.md  app.py  requirements.txt
New/services/monitoring-agent/: Dockerfile  app.py  requirements.txt
New/services/orchestrator/: Dockerfile  app.py  app.py.backup.20251201_153317  app_ENHANCED.py  app_endpoints.py  celery_app.py  celery_app.py.backup.20251202-201128  circuit_breaker.py  config.py  database.py  db_helpers.py  deduplication.py  logging_config.py  models.py  request_middleware.py  requirements.txt  requirements_db.txt  rq_tasks.py  rq_worker.py  startup.py  worker_entrypoint.sh
New/services/persistence/: __init__.py  adapter.py  migrate.py  models.py
New/services/recon-agent/: Dockerfile  app.py  requirements.txt
New/services/remediator/: Dockerfile  README.md  app.py
New/services/reporting-agent/: Dockerfile  app.py  requirements.txt
New/services/signature-generator/: Dockerfile  README.md  app.py  requirements.txt
New/services/static-agent/: Dockerfile  app.py  requirements.txt
New/services/streaming-indexer/: app.py  (+3 more)
New/tests/: Dockerfile  PROBLEM_ANALYSIS.md  QUICK_START.md  STATUS_REPORT.md  TEST_SETUP.md  docker-compose.test.yml  run-tests.ps1  run-tests.sh  test_migration.py  test_pipeline_inmemory.py  verify_force_decompile.ps1
New/web-ui/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
OLD/damn-vulnerable-defi-4.1.0/intents-main/tests/contracts/multi-token-receiver-stub/: Cargo.toml
OLD/damn-vulnerable-defi-4.1.0/intents-main/token-id/: Cargo.toml
OLD/damn-vulnerable-defi-4.1.0/intents-main/token-id/src/: lib.rs
OLD/dashboard/: app.py
OLD/data/: web3_hunter.db
OLD/legacy_archive/: E2E_TEST_RESULTS.md  ENHANCEMENT_ROADMAP.md  FOUNDRY_INSTALL.md  NEXT_STEPS.md  QUICKSTART.md  README.md  SCAN_FIX_SUMMARY.md  add_foundry_to_path.ps1  analyze_real_contracts.py  test_quick.py  validate_env.py  yes  yes.pub
OLD/mempool-scanner/: Cargo.toml
OLD/rag_pipeline/: ast_splitter.py  ingest_data.py
OLD/reports/: E2ETestContract_20251124_141129.md  E2ETestContract_20251124_141829.md  TestContract_20251124_141112.md  TestContract_20251124_141813.md  VulnerableVault_20251124_140743.md
OLD/scripts/: setup.py  test_e2e.py
damn-vulnerable-defi-4.1.0/intents-main/: CHANGELOG.md  Makefile.toml
damn-vulnerable-defi-4.1.0/intents-main/defuse/: Cargo.toml
damn-vulnerable-defi-4.1.0/intents-main/defuse/src/: accounts.rs  lib.rs
damn-vulnerable-defi-4.1.0/intents-main/defuse/src/contract/: mod.rs
damn-vulnerable-defi-4.1.0/intents-main/defuse/src/contract/accounts/: mod.rs
damn-vulnerable-defi-4.1.0/intents-main/defuse/src/contract/accounts/account/: mod.rs
damn-vulnerable-defi-4.1.0/intents-main/defuse/src/contract/accounts/account/entry/tests/: legacy.rs
damn-vulnerable-defi-4.1.0/intents-main/defuse/src/contract/intents/: mod.rs  simulate.rs
damn-vulnerable-defi-4.1.0/intents-main/defuse/src/contract/state/: mod.rs  v0.rs
damn-vulnerable-defi-4.1.0/intents-main/defuse/src/contract/tokens/nep245/: core.rs  deposit.rs
damn-vulnerable-defi-4.1.0/intents-main/poa-factory/: Cargo.toml
damn-vulnerable-defi-4.1.0/intents-main/poa-factory/src/: contract.rs
damn-vulnerable-defi-4.1.0/intents-main/poa-token/: Cargo.toml
data/flattened/: TestContract_a442c8ef-5990-47b7-bb58-63373e567bdd.sol
data/reports/: TestContract_20251123_215521.html
legacy_archive/: CLEANUP_REPORT.md  COVERAGE_ANALYSIS.md  cleanup.bat  hunt.py  install_foundry.ps1  test_100_coverage.py
legacy_archive/tests/: test_flattener_manual.py
legacy_archive/web_ui/: app.py
mempool-scanner/src/: main.rs
src/: config.py
src/analysis/: slither_runner.py
src/detectors/: advanced_detectors.py
src/ingestion/: contract_fetcher.py  flattener.py  surya_runner.py
src/integrations/: etherscan_api.py
src/knowledge/: ingest_2025_threats.py  ingest_roadmap.py
src/verification/: poc_generator.py
tests/: test_dvd_compatibility.py  test_hunter_graph.py  test_poc_flow.py  test_slither_runner.py  vulnerable.sol
tests/data/: Test.sol
web_ui/: app.py.corrupted
web_ui/templates/: index.html  index_backup.html
(+210 files in other folders)
