[package]
name = "defuse-poa-factory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.2-rust-1.86.0"
image_digest = "sha256:74c24d4d912f893198b8b13e01d43e0f78f3b00b3df45bf555a707eb4918a54e"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
    "--features=contract",
    "--no-embed-abi"

]

[dependencies]
defuse-admin-utils.workspace = true
defuse-near-utils.workspace = true
defuse-poa-token.workspace = true

near-contract-standards.workspace = true
near-plugins.workspace = true
near-sdk.workspace = true

[features]
contract = []

[build-dependencies]
cargo-near-build = { workspace = true, features = ["build_external"] }
