[package]
name = "multi-token-receiver-stub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
defuse-nep245.workspace = true
near-sdk.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces.workspace = true
tokio.workspace = true
serde_json.workspace = true
